--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
+    "react-scroll-to-top": "^3.0.0",
     "react-vertical-timeline-component": "^3.5.2",
     "sass": "^1.55.0",
     "web-vitals": "^2.1.4"
